--- a/style.css
+++ b/style.css
@@ -9,6 +9,37 @@ body {
     overflow-x: hidden;
 }
 
+#banner {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 4vw;
+    background: #22272c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#logo {
+    width: 3vw;
+}
+
+#contact-me {
+    position: absolute;
+    right: 1vw;
+    width: 7vw;
+    height: 75%;
+    background: #2a4158;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    text-decoration: none;
+}
+
 #title {
     position: absolute;
     top: 10vw;
@@ -49,7 +80,7 @@ body {
     position: absolute;
     font-size: 2vw;
     top: 13vw;
-    width: 10vw;
+    width: 12vw;
     height: fit-content;
     background: #2a4158;
     cursor: pointer;
@@ -59,6 +90,7 @@ body {
     border-radius: 5px;
     transition: 0.5s;
     box-sizing: border-box;
+    border: 5px solid #22272c;
 }
 
 #about-me {
@@ -91,6 +123,13 @@ body {
     font-size: 2vw;
     position: relative;
     left: 1vw;
+}
+
+#github-logo {
+    position: absolute;
+    right: 40vw;
+    top: 1vw;
+    width: 3vw;
 }
 
 #projects {
@@ -198,4 +237,42 @@ body {
     position: relative;
     left: 30vw;
     width: 40vw;
+}
+
+#skills-band {
+    position: absolute;
+    top: 150vw;
+    width: 100%;
+    background: #597387;
+    height: 30vw;
+    display: flex;
+    align-items: center;
+}
+
+#skills-word {
+    color: white;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 2.5vw;
+    position: relative;
+    left: 10vw;
+}
+
+#skills-text1 {
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 2vw;
+    position: relative;
+    left: 40vw;
+    width: 10vw;
+    text-align: center;
+}
+
+#skills-text2 {
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 2vw;
+    position: relative;
+    left: 50vw;
+    width: 20vw;
+    text-align: center;
 }
